Set minimum width to ensure navbar and contents don't collapse into each other

--- a/assets/styles/custom/elements.less
+++ b/assets/styles/custom/elements.less
@@ -3,7 +3,7 @@
  */
 
 body {
-    min-width: 865px;
+    min-width: @minimum-app-width;
 
     &.no-scroll {
       overflow: hidden;
