--- a/assets/styles/custom/navbar.less
+++ b/assets/styles/custom/navbar.less
@@ -45,6 +45,7 @@
   md-toolbar {
     background-color: @color-primary;
     height: 64px;
+    min-width: @minimum-app-width;
     position: fixed;
     z-index: 99;
 
