--- a/assets/styles/custom/size.less
+++ b/assets/styles/custom/size.less
@@ -4,5 +4,7 @@
 
 @navbar-height: 60px;
 
+@minimum-app-width: 865px;
+
 @dashboard-video-height: 110px;
 @dashboard-video-width: 196px;
